--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="https://github.com/harry-sunhao"
+                <a href="https://github.com/harry-sunhao/PencilDrawing/blob/main/Pencil%20Drawing%20Using%20Convolutional%20Neural%20Networks.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
