--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
     <!-- Paper video. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Video(TBA)</h2>
+        <h2 class="title is-3">Video</h2>
         <div class="publication-video">
-          <iframe src="TBA"
+          <iframe src="https://youtu.be/ZFePJiG0lG8"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
