--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Video</h2>
         <div class="publication-video">
-          <iframe src="https://youtu.be/ZFePJiG0lG8"
+          <iframe src="https://www.youtube.com/watch?v=ZFePJiG0lG8"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
