--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <h1 class="title is-1 publication-title">Pencil Drawing Using Convolutional Neural Networks </h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://github.com/harry-sunhao">Hao Sun</a><sup>1</sup>,</span>
+              <a href="https://sfu.ca/~hsa117">Hao Sun</a><sup>1</sup>,</span>
           </div>
 
           <div class="is-size-5 publication-authors">
